Tests/CompilerTests/negative/missing-comma.hylo
//! no-std

fun f<T U>(_ x: T, _ y: U) {}
