Tests/CompilerTests/negative/missing-comma.diagnostics.expected
negative/missing-comma.hylo:3.8: error: expected ','
fun f<T U>(_ x: T, _ y: U) {}
       ^

